# agentic-math-solver

./: .gitignore  README.md  pyproject.toml  qwen3_5_multi_agent_4_with_judges.ipynb
outputs/conversations/: 1783707987268.json  1783708950777.json
prompts/: architect.md  formalist.md  judge.md  oracle.md  sentinel.md  summary.md  system.md
src/agentic_math_solver/: __init__.py  cli.py  config.py  conversation_store.py  file_processor.py  list_parser.py  llm_client.py  orchestrator.py  pdf_report.py  prompts.py  tools.py  types.py  utils.py
src/agentic_math_solver/agents/: __init__.py  judge.py  swarm.py
src/agentic_math_solver/ui/: __init__.py  gradio_app.py
src/agentic_math_solver/web/: __init__.py  app.py
src/agentic_math_solver/web/static/: app.js  styles.css
src/agentic_math_solver/web/templates/: index.html
