[project]
name = "agentic-math-solver"
version = "0.1.0"
description = "A modular local-first multi-agent math solver with judge-based arbitration."
readme = "README.md"
# Core dependencies remain light and engine-agnostic
dependencies = [
    "Flask", 
    "duckduckgo-search", 
    "mcp"
]

[project.optional-dependencies]
# Group vLLM and its required torch runtime together
vllm = [
    "vllm>=0.6.0",
    "torch"
]
# Group SGLang and its required torch runtime together
sglang = [
    "sglang",
    "torch"
]
# Keep your existing environments
cpu = [
    "transformers", 
    "torch"
]
dev = [
    "pytest"
]
